--- a/package.json
+++ b/package.json
@@ -36,10 +36,13 @@
     "eslint-plugin-storybook": "^0.12.0",
     "globals": "^16.0.0",
     "playwright": "^1.52.0",
+    "prettier": "^3.5.3",
     "storybook": "^8.6.12",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
     "vite": "^6.3.1",
+    "vite-plugin-svgr": "^4.3.0",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.1.2"
   },
   "eslintConfig": {
