--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,5 +49,9 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           envs: TAR_NAME,PROJECT_NAME          
           script: |
+            IMAGE_NAME=$PROJECT_NAME:latest
+            docker stop $PROJECT_NAME || true
+            docker rm $PROJECT_NAME || true
+            docker rmi $IMAGE_NAME || true
             docker load -i $TAR_NAME
-            docker run -d -p 80:80 --name $PROJECT_NAME $PROJECT_NAME:latest
+            docker run -d -p 80:80 --name $PROJECT_NAME $IMAGE_NAME
