--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy Storybook
 on:
   push:
     branches:
-      - feature/docker-deploy
+      - main
 
 env:
   PROJECT_NAME: ui-experiments
@@ -26,7 +26,6 @@ jobs:
         run: |
           docker build -f ${{ env.DOCKER_FILE }} -t ${{ env.PROJECT_NAME }} .
           docker save ${{ env.PROJECT_NAME }}:latest > ${{ env.TAR_NAME }}
-          ls -sh ${{ env.TAR_NAME }}
 
       - name: Transfer image to server via SCP
         uses: appleboy/scp-action@master
