--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,11 +3,11 @@ name: Deploy Storybook
 on:
   push:
     branches:
-      - main
+      - feature/server-build
 
 env:
   PROJECT_NAME: ui-experiments
-  TAR_NAME: ${{ vars.PROJECT_NAME }}.tar
+  TEMP_DIR: /home/${{ secrets.SSH_USER }}/temp
   DOCKER_FILE: ./docker.storybook
 
 jobs:
@@ -19,37 +19,33 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build Docker image
-        run: |
-          docker build -f ${{ env.DOCKER_FILE }} -t ${{ env.PROJECT_NAME }} .
-          docker save ${{ env.PROJECT_NAME }}:latest > ${{ env.TAR_NAME }}
-
-      - name: Transfer image to server via SCP
+      - name: Transfer files to server via SCP
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: '${{ env.TAR_NAME }}'
-          target: '/home/${{ secrets.SSH_USER }}/'
+          source: '.'
+          target: '${{ env.TEMP_DIR }}'
+          strip_components: 0
 
       - name: Deploy on server via SSH
         uses: appleboy/ssh-action@master
         env:
-          TAR_NAME: ${{ env.TAR_NAME }}
+          TEMP_DIR: ${{ env.TEMP_DIR }}
           PROJECT_NAME: ${{ env.PROJECT_NAME }}
+          DOCKER_FILE: ${{ env.DOCKER_FILE }}
         with:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          envs: TAR_NAME,PROJECT_NAME
+          envs: TEMP_DIR,PROJECT_NAME,DOCKER_FILE
           script: |
+            cd $TEMP_DIR
             IMAGE_NAME=$PROJECT_NAME:latest
             docker stop $PROJECT_NAME || true
             docker rm $PROJECT_NAME || true
             docker rmi $IMAGE_NAME || true
-            docker load -i $TAR_NAME
+
+            docker build -f $DOCKER_FILE -t $IMAGE_NAME .
             docker run -d -p 80:80 --name $PROJECT_NAME $IMAGE_NAME
