--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,8 +41,8 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           envs: TEMP_DIR,CONTAINER_NAME,DOCKER_FILE
           script: |
-            cd $TEMP_DIR
             IMAGE_NAME=$CONTAINER_NAME:latest
+            cd $TEMP_DIR
 
             docker build -f $DOCKER_FILE -t $IMAGE_NAME .
 
@@ -51,5 +51,6 @@ jobs:
 
             docker run -d -p 80:80 --name $CONTAINER_NAME $IMAGE_NAME
 
+            docker image prune -f
             cd ..
             rm -rf $TEMP_DIR
